--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html data-theme='light' lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/title.jpeg" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Lutfia Atimkhana</title>
   </head>
   <body>
     <div id="root"></div>
